# jpercival21.github.io

./: README.md  _config.yml  pyproject.toml
.github/workflows/: build.yml
config/: settings.py  urls.py
core/: data.py  football.py  views.py
core/templates/core/: index.html  next_match_preview.html
docs/: index.html
sweepstakes/: matchdata.py
