[project]
name = "sweepstakes"
version = "0.1.0"
description = "World Cup Sweepstakes Website"
authors = [
    {name = "jpercival21",email = "jpercival21@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
