[project]
name = "sweepstakes"
version = "0.1.0"
description = "World Cup Sweepstakes Website"
authors = [
    {name = "jpercival21", email = "jpercival21@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6,<7.0.0",
    "django-distill>=3.2.7,<4.0.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
